welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: illegal start of simple expression
    if(nums(i-1)==nums(i-2)+5 && (nums(i-2)-1==nums(i)|| nums(i-2)-1==nums(i)+1 ||nums(i-2)-1==nums(i)+2 ||nums(i-2)-1==nums(i)-1||nums(i-2)-1==nums(i)-2) )){ok = true}
                                                                                                                                                            ^